# learnopencv

./: CMakeLists.txt  main.cpp  quickdemo.cpp  quickdemo.h
